# Mechanical-Engineering

01-Turntable/: Barrier.fbx  Barrier.stl  Disk.fbx  Disk.stl  Frame.fbx  Jar.fbx  Jar.mtl  Jar.stl
02-Linear-Guide/Models/: T8 Nut 1.5 (1).step
04-Model-Conveyor Belt and Robotic Arm/Assets/: Conveyor Belt.unity
04-Model-Conveyor Belt and Robotic Arm/Conveyor Belt/: Assembly-CSharp.csproj
04-Model-Conveyor Belt and Robotic Arm/Conveyor Belt/Assets/: Conveyor Belt.unity
04-Model-Conveyor Belt and Robotic Arm/Conveyor Belt/ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset
04-Model-Conveyor Belt and Robotic Arm/Conveyor Belt/UserSettings/: EditorUserSettings.asset
04-Model-Conveyor Belt and Robotic Arm/Robotic Arm/: .gitignore
04-Model-Conveyor Belt and Robotic Arm/Robotic Arm 2/Python Client/: .gitignore  ImageReadTCP_One.py  Part2.m  Part2.py  Part3.m  Part3.py  Part4.m  Part4.py  TCPInit.py  color_check.py  func_data.m  func_data.py  func_grab.py  new_object.py  pyproject.toml  test.py  writeTCP.py
04-Model-Conveyor Belt and Robotic Arm/Robotic Arm/ComputerVision/: .gitignore  README.md  Unity-Python Relationship.ipynb  best_model.keras  dataframe.csv  pyproject.toml  robot_control.py
Assets/Materials/: Blue.mat  Conveyor.mat  Green.mat  Orange.mat  Pink.mat  Red.mat
Assets/Physical Materials/: New Physics Material.physicMaterial
Assets/Script/: ConveyorMaterialMotion.cs  ConveyorMovement.cs  PistonMovement.cs  RotationalMovement.cs  Translate.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
(+69 files in other folders)
