[tool.poetry]
name = "robotic-arm"
version = "0.1.0"
description = ""
authors = ["MaxDuong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
roboticstoolbox-python = "^1.1.1"
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
