[tool.poetry]
name = "robotic-arm"
version = "0.1.0"
description = ""
authors = ["MaxDuong"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
roboticstoolbox-python = "^1.1.1"
numpy = "<2.0"
opcua = "^0.98.13"
cryptography = "^44.0.0"
asyncua = "^1.1.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
ultralytics = "^8.3.68"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
